# aissemble-open-inference-protocol-use-case-example

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pom.xml  pyproject.toml
deploy/: README.md
deploy/apps/inference-services/: Chart.yaml
deploy/apps/inference-services/templates/: inference-service-grpc.yaml  inference-service.yaml
deploy/infrastructure/cert-manager/: Chart.yaml  values.yaml
deploy/infrastructure/kserve/: Chart.yaml  values.yaml
deploy/infrastructure/kserve-crds/: Chart.yaml
deploy/infrastructure/nginx/: Chart.yaml
proto/: grpc_inference_service.proto
server/: ExamplePolicy.xml  catalog.xml  logback.xml  pdp.xml  spring-beans.xml
src/: __init__.py
src/aissemble_open_inference_protocol_use_case/: generate_simple_jwt.py  launch_fastapi_auth_example.py  main.py  main_with_auth.py  oip_handler.py
src/resources/krausening/base/: oip.properties
